增加rest接口异常处理

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -107,6 +107,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.8</version>
+        </dependency>
     </dependencies>
 
     <build>
