--- a/client/package.json
+++ b/client/package.json
@@ -79,6 +79,7 @@
     "redux": "^3.5.2",
     "redux-form": "^5.3.2",
     "redux-thunk": "^2.1.0",
+    "underscore": "^1.8.3",
     "watchpack": "^1.1.0"
   },
   "devDependencies": {
