--- a/client/package.json
+++ b/client/package.json
@@ -65,7 +65,9 @@
     "express-session": "^1.13.0",
     "fs-extra": "^0.26.4",
     "history": "^1.17.0",
+    "http-proxy-middleware": "^0.17.4",
     "immutable": "^3.8.1",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.0.0",
     "moment": "^2.11.2",
     "mysql": "^2.10.2",
@@ -79,6 +81,7 @@
     "redux": "^3.5.2",
     "redux-form": "^5.3.2",
     "redux-thunk": "^2.1.0",
+    "request": "^2.82.0",
     "underscore": "^1.8.3",
     "watchpack": "^1.1.0"
   },
