--- a/client/package.json
+++ b/client/package.json
@@ -64,7 +64,7 @@
     "express": "^4.13.3",
     "express-session": "^1.13.0",
     "fs-extra": "^0.26.4",
-    "history": "^1.17.0",
+    "history": "^4.7.2",
     "http-proxy-middleware": "^0.17.4",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
@@ -76,12 +76,14 @@
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.0.0",
-    "react-router": "^2.5.2",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redis": "^2.4.2",
     "redux": "^3.5.2",
     "redux-form": "^5.3.2",
     "redux-thunk": "^2.1.0",
     "request": "^2.82.0",
+    "scroll-behavior": "^0.9.3",
     "underscore": "^1.8.3",
     "watchpack": "^1.1.0"
   },
