--- a/client/package.json
+++ b/client/package.json
@@ -69,6 +69,7 @@
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.0.0",
+    "js-cookie": "^2.1.4",
     "moment": "^2.11.2",
     "mysql": "^2.10.2",
     "parseurl": "^1.3.1",
