增加单点登录配置

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -49,3 +49,10 @@ spring:
             max-wait: -1
             max-idle: 8
             min-idle: 0
+    security:
+        messages:
+                ConcurrentSessionControlAuthenticationStrategy:
+                    exceededAllowed: 已经在别处登陆
+
+prefixPath: /api
+
