--- a/client/package.json
+++ b/client/package.json
@@ -71,6 +71,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.0.0",
     "js-cookie": "^2.1.4",
+    "lodash": "^4.17.4",
     "moment": "^2.11.2",
     "mysql": "^2.10.2",
     "parseurl": "^1.3.1",
@@ -86,7 +87,6 @@
     "redux-thunk": "^2.1.0",
     "request": "^2.82.0",
     "scroll-behavior": "^0.9.3",
-    "underscore": "^1.8.3",
     "watchpack": "^1.1.0"
   },
   "devDependencies": {
