--- a/server/pom.xml
+++ b/server/pom.xml
@@ -17,10 +17,7 @@
     <properties>
         <java.version>1.8</java.version>
         <!--  依赖版本  -->
-        <mybatis.version>3.3.1</mybatis.version>
-        <mybatis.spring.version>1.2.4</mybatis.spring.version>
         <commons-io.version>2.4</commons-io.version>
-        <pagehelper.version>4.1.1</pagehelper.version>
         <oracle.driver.version>10.2.0.4.0</oracle.driver.version>
         <commons-lang3.version>3.3.2</commons-lang3.version>
         <validator.version>6.0.2.Final</validator.version>
@@ -69,6 +66,24 @@
             <artifactId>spring-session</artifactId>
             <version>1.3.1.RELEASE</version>
         </dependency>
+        <!--mybatis-->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+        <!--mapper-->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>1.1.4</version>
+        </dependency>
+        <!--pagehelper-->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.3</version>
+        </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
@@ -92,25 +107,7 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!--Mybatis-->
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>${mybatis.version}</version>
-        </dependency>
 
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis-spring</artifactId>
-            <version>${mybatis.spring.version}</version>
-        </dependency>
-
-        <!--分页插件-->
-        <dependency>
-            <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version>${pagehelper.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>org.apache.commons</groupId>
