--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
       }
     },
     "deploy": {
-      "command": "npm run clean && npm run compile",
+      "command": "npm run compile",
       "env": {
         "NODE_ENV": "production"
       }
