--- a/server/pom.xml
+++ b/server/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>muyu</groupId>
-    <artifactId>pm</artifactId>
+    <artifactId>framework</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
