--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,4 +1,6 @@
 {
   "presets": ["es2015", "react", "stage-0"],
-  "plugins": ["transform-runtime"]
+  "plugins": ["transform-runtime",["import", {
+    "libraryName": "antd"
+  }]]
 }
