增加个人信息修改

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -11,6 +11,10 @@ logging:
         muyu: DEBUG
 
 spring:
+    http:
+        multipart:
+            maxFileSize: 10Mb
+            maxRequestSize: 10Mb
 
     datasource:
 
