--- a/server/pom.xml
+++ b/server/pom.xml
@@ -60,7 +60,10 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>1.5.7.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session</artifactId>
