修改用户编辑

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -13,6 +13,7 @@ logging:
 spring:
     http:
         multipart:
+            enabled:  true
             maxFileSize: 10Mb
             maxRequestSize: 10Mb
 
