增加附件上传功能

--- a/nginx-1.11.4/conf/nginx.conf
+++ b/nginx-1.11.4/conf/nginx.conf
@@ -24,6 +24,7 @@ http {
 
     #access_log  logs/access.log  main;
 
+	client_max_body_size 2m;  
     sendfile        on;
     #tcp_nopush     on;
 
