--- a/nginx-1.11.4/conf/nginx.conf
+++ b/nginx-1.11.4/conf/nginx.conf
@@ -45,8 +45,14 @@ http {
 		charset utf-8;
 
         access_log  logs/host.access.log;
+		
+		location ^~ /files/ {
+			root   E:/;
+			autoindex on;
+		}
 
-        location ^~ /api/ {
+
+        location ~* /api/ {
             proxy_pass  http://127.0.0.1:9999;
 
             proxy_redirect default;
