--- a/server/pom.xml
+++ b/server/pom.xml
@@ -21,6 +21,7 @@
         <oracle.driver.version>10.2.0.4.0</oracle.driver.version>
         <commons-lang3.version>3.3.2</commons-lang3.version>
         <validator.version>6.0.2.Final</validator.version>
+        <activiti.version>5.17.0</activiti.version>
     </properties>
 
     <dependencies>
@@ -68,6 +69,26 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session</artifactId>
             <version>1.3.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <version>1.5.8.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>spring-boot-starter-basic</artifactId>
+            <version>${activiti.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>spring-boot-starter-rest-api</artifactId>
+            <version>${activiti.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.activiti</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+            <version>${activiti.version}</version>
         </dependency>
         <!--mybatis-->
         <dependency>
