--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
         url: jdbc:oracle:thin:@localhost:1521:orcl
         username: muyu
         password: muyu
-
+        DataSchema: muyu
         # 使用druid数据源
         type: com.alibaba.druid.pool.DruidDataSource
 
