--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -40,7 +40,8 @@ spring:
         testOnReturn: false
         poolPreparedStatements: true
         maxOpenPreparedStatements: 20
-
+    activiti:
+      checkProcessDefinitions:  false
 
     redis:
         database: 0
