--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -58,7 +58,7 @@ spring:
 
     jackson:
         default-property-inclusion: non_null
-
+        date-format: yyyy-MM-dd HH:mm:ss
 
     session:
       store-type: redis
