'模型编辑可以用'

--- a/nginx-1.11.4/conf/nginx.conf
+++ b/nginx-1.11.4/conf/nginx.conf
@@ -52,7 +52,7 @@ http {
 		}
 
 
-        location ~* (/api/|/act/) {
+        location ~* (/api/|/act/|editor-app|diagram-viewer|modeler.html|service) {
             proxy_pass  http://127.0.0.1:9999;
 
             proxy_redirect default;
