--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-blog",
-  "version": "0.3.2",
-  "description": "一个利用webpack加载的react redux实现的博客系统",
+  "name": "muyu-framework",
+  "version": "0.5.2",
+  "description": "一个利用react实现的后台管理框架",
   "scripts": {
     "compile": "node -r dotenv/config --harmony bin/compile  --display-modules",
     "start": "better-npm-run development",
@@ -79,8 +79,6 @@
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-redux": "^4.0.0",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
     "redis": "^2.4.2",
     "redux": "^3.5.2",
     "redux-form": "^5.3.2",
