--- a/nginx-1.11.4/conf/nginx.conf
+++ b/nginx-1.11.4/conf/nginx.conf
@@ -50,7 +50,22 @@ http {
 			root   E:/;
 			autoindex on;
 		}
+		
+		
+		location ~* (/muyu-websocket|/app){
+            proxy_pass  http://127.0.0.1:9999;
 
+            proxy_redirect default;
+			
+            #设置代理
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+			proxy_connect_timeout  10;
+			
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
 
         location ~* (/api/|/act/|editor-app|diagram-viewer|modeler.html|service) {
             proxy_pass  http://127.0.0.1:9999;
