--- a/nginx-1.11.4/conf/nginx.conf
+++ b/nginx-1.11.4/conf/nginx.conf
@@ -58,10 +58,11 @@ http {
             proxy_redirect default;
 			
             #设置代理
+			proxy_connect_timeout 4s; 
+			proxy_read_timeout 60s; 
+			proxy_send_timeout 12s;
             proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-			proxy_connect_timeout  10;
-			
+            proxy_set_header X-Real-IP $remote_addr;		
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
