--- a/client/package.json
+++ b/client/package.json
@@ -58,6 +58,7 @@
     "better-npm-run": "0.0.5",
     "body-parser": "^1.14.2",
     "cheerio": "^0.20.0",
+    "color": "^2.0.1",
     "connect-redis": "^3.0.2",
     "cookie-parser": "^1.4.1",
     "debug": "^2.2.0",
