--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -69,6 +69,11 @@ spring:
         suffix: .html
         prefix: static
 
+mybatis:
+    type-aliases-package: muyu.system.entity
+    config-location: classpath:mybatis-config.xml
+    mapper-locations: classpath:mapper/*/*.xml
+
 management:
     security:
         enabled: false
